--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "listViewApp"]
-	path = listViewApp
-	url = /Users/mohsin/Desktop/iOS_Apps/listViewApp
+[submodule "counterApp"]
+	path = counterApp
+	url = /Users/mohsin/Desktop/iOS_Apps/git/counterApp
