--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "counterApp"]
 	path = counterApp
 	url = /Users/mohsin/Desktop/iOS_Apps/git/counterApp
+[submodule "todoApp"]
+	path = todoApp
+	url = ../iOS-TodoApp.git
